<resources>
    <string name="app_name">FTC2</string>

    <string name="hello_world">Select from following list:</string>
    <string name="action_settings">Settings</string>

    <string name="button_battery">Battery Level</string>
    <string name="title_activity_display_battery_level">Battery Level</string>

    <string name="button_wifi">WIFI</string>
    <string name="title_activity_display_wifi">Wifi Info</string>

    <string name="button_sensors">Sensors</string>
    <string name="title_activity_sensor">Sensor Activity</string>

    <string name="button_orientation">Orientation Sensor</string>
    <string name="title_activity_display_orientation">Display Orientation</string>

    <string name="button_wifi_scan">WIFI scan</string>
    <string name="title_activity_display_wifi_scan">Display Wifi Scan</string>
    <string name="wifi_scan_header">Wifi scan of nearby networks</string>

    <string name="button_scan">Scan for WIFI networks</string>
    <string name="button_wifi_channels">Scan for Wifi Channels</string>
    <string name="title_activity_display_wifi_channels">Display Wifi Channels</string>
</resources>
